# timeseries-poc

./: .gitignore  .mise.toml  README.md  docker-compose.yaml  run.sh
go-poc/: Dockerfile  build.sh  go.mod  go.sum
go-poc/src/: main.go
go-poc/src/ewma/: ema.go
go-poc/src/utils/: bench.go  load_file.go  ts_operations.go
node-poc/: Dockerfile  lerna.json  package-lock.json  package.json
node-poc/src/: index.ts  load-file.ts  ts-operations.ts
python-poc/: Dockerfile  poetry.toml  pyproject.toml
python-poc/src/timeseries/: compare.py  main.py  ts_generator.py  visualize_timings.py
rust-poc/: Cargo.toml  Dockerfile
rust-poc/src/: main.rs  utils.rs
rust-poc/src/utils/: bench.rs  csv_writer.rs
